# FTaChatte

./: LICENSE.md  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/pagination/: pagination-link.svelte  pagination-next-button.svelte  pagination-prev-button.svelte
src/routes/: +layout.svelte  +page.svelte
